--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <a href="contact.html">
         <li>Contact</li>
     </a>
+    <a href="projects.html">
+        <li>Projects</li>
+    </a>
     </ul>
 </nav>
 </header>
