--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <h1>Gabriella Sundström</h1>
         <nav>
     <ul>
+                <a href="index.html">
+                    <li>Home</li>
+                </a>
         <a href="#">
         <li>About</li>
     </a>
@@ -28,6 +31,8 @@
     </ul>
 </nav>
 </header>
+
+
     <main> <!--Body text-->
         <p>Welcome! My name is Gabriella and I study graphic design in Jönköping, Sweden. I was born in 2002 and i love typography, color theory and being creative. I aspire to be a graphic designer in the future
           and therefore i study the New Media program at Jönköping University. Here you can see my work and my progress. Hope you enjoy.</p>
@@ -36,5 +41,4 @@
         <p>@Gabriella Sundstrom</p>
     </footer>
 </body>
-</html>
-<!--hello-->
+
