--- a/cafe-brand.html
+++ b/cafe-brand.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> <!--Website title and links to font-->
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriella Sundström</title>
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-    
 </head>
 <body>
     <header> <!--Headline-->
@@ -30,23 +29,37 @@
             </ul>
         </nav>
 </header>
-<main> <!--Contact form-->
-    <p>Do you have a question?</p>
-    <!-- The following 6 lines of code were adapted from https://www.w3schools.com/howto/howto_css_contact_form.asp -->
-    <form>
-    <input type="text"value="First name"/>
-    <input type="text"value="Last name"/>
-    <input type="text"value="Email"/>
-    <input type="text"value="Write your question"/>
-    </form>
-    <!-- The line below was adapted from https://www.w3schools.com/tags/tag_button.asp -->
-    <button type="button">Submit</button>
+<main>
+    <h2>Octagon Café - Brand Identity and Visual Identity</h2>
+    <p>After working for two years and traveling for another, 
+        I finally began studying graphic design and moved to
+        Jönköping. This project is from 2024 and is a brand 
+        idea for a café in Jönköping with a retro style logo
+        and visual identity. 
+    </p>
+    <section class="cafe-brand-container">
+
+        <figure>
+            <img class="cafe-brand-image" src="IMG_9604.jpeg">
+        </figure>
+
+
+        <figure>
+            <img class="cafe-brand-image" src="IMG_9605.jpeg">
+        </figure>
+
+    <figure>
+        <img class="cafe-brand-image" src="IMG_9606.jpeg">        
+    </figure>
+
+   <figure>
+    <img class="cafe-brand-image" src="IMG_9607.jpeg">
+   </figure>
+    
+</section>
 </main>
-<footer><!--Link back and footer-->
+<footer>
     <p>@Gabriella Sundstrom</p>
 </footer>
 </body>
 </html>
-
-
-
