--- a/tastly.html
+++ b/tastly.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> <!--Website title and links to font-->
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriella Sundström</title>
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-    
 </head>
 <body>
     <header> <!--Headline-->
@@ -30,23 +29,23 @@
             </ul>
         </nav>
 </header>
-<main> <!--Contact form-->
-    <p>Do you have a question?</p>
-    <!-- The following 6 lines of code were adapted from https://www.w3schools.com/howto/howto_css_contact_form.asp -->
-    <form>
-    <input type="text"placeholder="First name"/>
-    <input type="text"placeholder="Last name"/>
-    <input type="text"placeholder="Email"/>
-    <input type="text"placeholder="Write your question"/>
-    </form>
-    <!-- The line below was adapted from https://www.w3schools.com/tags/tag_button.asp -->
-    <button type="button">Submit</button>
+<main>
+    <h2>Tastly - Food Delivery App Brand Design</h2>
+    <p>Together with my friend Tuva Lehto I developed an interface for 
+        a food delivery application, and here is the visual identity 
+        that was part of this project. 
+ </p>
+
+    <section class="tastly-container">
+
+        <figure>
+            <img class="tastly-image" src="IMG_tastly.jpg">
+        </figure>
+
+</section>
 </main>
-<footer><!--Link back and footer-->
+<footer>
     <p>@Gabriella Sundstrom</p>
 </footer>
 </body>
 </html>
-
-
-
