--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <main> <!--Body text-->
         <p>Welcome! My name is Gabriella and I study graphic design in Jönköping, Sweden. I was born in 2002 and i love typography, color theory and being creative. I aspire to be a graphic designer in the future
           and therefore i study the New Media program at Jönköping University. Here you can see my work and my progress. Hope you enjoy.</p>
+          <img class="me-image" src="IMG_0235.jpg" alt="Image of me">
     </main>
     <footer>
         <p>@Gabriella Sundstrom</p>
