--- a/cafe-brand.html
+++ b/cafe-brand.html
@@ -40,20 +40,20 @@
     <section class="cafe-brand-container">
 
         <figure>
-            <img class="cafe-brand-image" src="IMG_9604.jpeg">
+            <img class="cafe-brand-image" src="images/IMG_9604.jpeg">
         </figure>
 
 
         <figure>
-            <img class="cafe-brand-image" src="IMG_9605.jpeg">
+            <img class="cafe-brand-image" src="images/IMG_9605.jpeg">
         </figure>
 
     <figure>
-        <img class="cafe-brand-image" src="IMG_9606.jpeg">        
+        <img class="cafe-brand-image" src="images/IMG_9606.jpeg">        
     </figure>
 
    <figure>
-    <img class="cafe-brand-image" src="IMG_9607.jpeg">
+    <img class="cafe-brand-image" src="images/IMG_9607.jpeg">
    </figure>
     
 </section>
