--- a/coffee-book.html
+++ b/coffee-book.html
@@ -39,11 +39,11 @@
     <section class="coffee-book-container">
 
         <figure>
-            <img class="coffee-book-image" src="IMG_9602.jpeg">
+            <img class="coffee-book-image" src="images/IMG_9602.jpeg">
         </figure>
 
         <figure>
-            <img class="coffee-book-image" src="IMG_9603.jpeg">
+            <img class="coffee-book-image" src="images/IMG_9603.jpeg">
         </figure>
     
 </section>
