--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriella Sundström</title>
     <link rel="stylesheet" href="main.css"/>
+    <link rel="stylesheet" href="contact.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-    
 </head>
 <body>
     <header> <!--Headline-->
@@ -32,15 +32,19 @@
 </header>
 <main> <!--Contact form-->
     <p>Do you have a question?</p>
+    <div class="contact-form">
     <!-- The following 6 lines of code were adapted from https://www.w3schools.com/howto/howto_css_contact_form.asp -->
+    <section class="contact-container"> 
     <form>
     <input type="text"placeholder="First name"/>
     <input type="text"placeholder="Last name"/>
     <input type="text"placeholder="Email"/>
     <input type="text"placeholder="Write your question"/>
     </form>
+</section>
     <!-- The line below was adapted from https://www.w3schools.com/tags/tag_button.asp -->
-    <button type="button">Submit</button>
+    <button class="btn" type="button">Submit</button>
+</div>
 </main>
 <footer><!--Link back and footer-->
     <p>@Gabriella Sundstrom</p>
