--- a/hellokitty.html
+++ b/hellokitty.html
@@ -37,7 +37,7 @@
     <section class="hellokitty-container">
 
         <figure>
-            <img class="hellokitty-image" src="IMG_hellokitty.jpg">
+            <img class="hellokitty-image" src="images/IMG_hellokitty.jpg">
         </figure>
 
 </section>
