--- a/magazine.html
+++ b/magazine.html
@@ -40,7 +40,7 @@
     <section class="magazine-container">
 
         <figure>
-            <img class="magazine-image" src="IMG_magazine.jpg">
+            <img class="magazine-image" src="images/IMG_magazine.jpg">
         </figure>
 
 </section>
