--- a/projects.html
+++ b/projects.html
@@ -33,63 +33,61 @@
     <p>Here you can find some of my previous work. To read further about a project, click the image</p>
     <section class="projects-container">
 
-
 <a href="hellokitty.html">
     <figure>
-<img class="hellokitty-image" src="IMG_hellokitty.jpg" alt="Hello Kitty drawing">
+<img class="hellokitty-image" src="images/IMG_hellokitty.jpg" alt="Hello Kitty drawing">
 <figcaption>Hello Kitty Illustrator Assignment</figcaption>
 </figure>
 </a>
 
 <a href="magazine.html">
 <figure>
-    <img class="magazine-image" src="IMG_magazine.jpg" alt="Baking Magazine">
+    <img class="magazine-image" src="images/IMG_magazine.jpg" alt="Baking Magazine">
     <figcaption>Baking Magazine Layout</figcaption>
 </figure>
 </a>
 
 <a href="quotebook-1.html">
     <figure>
-<img class="projects-image" src="IMG_9575.jpg" alt="Quotebook 1 Front">
+<img class="projects-image" src="images/IMG_9575.jpg" alt="Quotebook 1 Front">
 <figcaption>Quotebook 1</figcaption>
 </figure>
 </a>
 
 <a href="quotebook-2.html">
 <figure>
-    <img class="projects-image" src="IMG_9585.jpg" alt="Quotebook 2 Front">
+    <img class="projects-image" src="images/IMG_9585.jpg" alt="Quotebook 2 Front">
     <figcaption>Quotebook 2</figcaption>
 </figure>
 </a>
 
 <a href="quotebook-3.html">
 <figure>
-<img class="projects-image" src="IMG_9595.jpg" alt="Quotebook 3 Front">
+<img class="projects-image" src="images/IMG_9595.jpg" alt="Quotebook 3 Front">
 <figcaption>Quotebook 3</figcaption>
 </figure>
 </a>
 
 <a href="tastly.html">
     <figure>
-<img class="tastly-image" src="IMG_tastly.jpg" alt="Tastly app">
+<img class="tastly-image" src="images/IMG_tastly.jpg" alt="Tastly app">
 <figcaption>Tastly - Food Delivery App</figcaption>
 </figure>
 </a>
 
 <a href="cafe-brand.html">
     <figure>
-<img class="projects-image" src="IMG_9604.jpeg" alt="Octagon brand identity">
+<img class="projects-image" src="images/IMG_9604.jpeg" alt="Octagon brand identity">
 <figcaption>Octagon Café - Brand Identity</figcaption>
 </figure>
 </a>
 
 <a href="coffee-book.html">
     <figure>
-<img class="projects-image" src="IMG_9602.jpeg" alt="Coffee table book">
+<img class="projects-image" src="images/IMG_9602.jpeg" alt="Coffee table book">
 <figcaption>Armi Ratia - Coffee Table Book Layout</figcaption>
 </figure>
 </a>
-
 
 </section>
 </main>
