--- a/quotebook-1.html
+++ b/quotebook-1.html
@@ -50,24 +50,24 @@
     <section class="book-1-container">
 
         <figure>
-            <img class="book-1-image" src="IMG_9575.jpg">
+            <img class="book-1-image" src="images/IMG_9575.jpg">
         </figure>
 
 
         <figure>
-            <img class="book-1-image" src="IMG_9578.jpg">
+            <img class="book-1-image" src="images/IMG_9578.jpg">
         </figure>
 
     <figure>
-        <img class="book-1-image" src="IMG_9580.jpg">        
+        <img class="book-1-image" src="images/IMG_9580.jpg">        
     </figure>
 
    <figure>
-    <img class="book-1-image" src="IMG_9581.jpeg">
+    <img class="book-1-image" src="images/IMG_9581.jpeg">
    </figure>
 
    <figure>
-    <img class="book-1-image" src="IMG_9584.jpeg">
+    <img class="book-1-image" src="images/IMG_9584.jpeg">
    </figure>
     
 </section>
