--- a/quotebook-2.html
+++ b/quotebook-2.html
@@ -50,31 +50,31 @@
     <section class="book-2-container">
 
         <figure>
-            <img class="book-2-image" src="IMG_9585.jpg">
+            <img class="book-2-image" src="images/IMG_9585.jpg">
         </figure>
 
         <figure>
-            <img class="book-2-image" src="IMG_9586.jpeg">
+            <img class="book-2-image" src="images/IMG_9586.jpeg">
         </figure>
 
     <figure>
-        <img class="book-2-image" src="IMG_9587.jpeg">        
+        <img class="book-2-image" src="images/IMG_9587.jpeg">        
     </figure>
 
    <figure>
-    <img class="book-2-image" src="IMG_9588.jpeg">
+    <img class="book-2-image" src="images/IMG_9588.jpeg">
    </figure>
 
    <figure>
-    <img class="book-2-image" src="IMG_9589.jpeg">
+    <img class="book-2-image" src="images/IMG_9589.jpeg">
    </figure>
 
    <figure>
-    <img class="book-2-image" src="IMG_9590.jpeg">
+    <img class="book-2-image" src="images/IMG_9590.jpeg">
    </figure>
 
    <figure>
-    <img class="book-2-image" src="IMG_9592.jpeg">
+    <img class="book-2-image" src="images/IMG_9592.jpeg">
    </figure>
     
 </section>
