--- a/quotebook-3.html
+++ b/quotebook-3.html
@@ -50,19 +50,19 @@
     <section class="book-3-container">
 
         <figure>
-            <img class="book-3-image" src="IMG_9595.jpg">
+            <img class="book-3-image" src="images/IMG_9595.jpg">
         </figure>
 
     <figure>
-        <img class="book-3-image" src="IMG_9596.jpeg">        
+        <img class="book-3-image" src="images/IMG_9596.jpeg">        
     </figure>
 
    <figure>
-    <img class="book-3-image" src="IMG_9597.jpeg">
+    <img class="book-3-image" src="images/IMG_9597.jpeg">
    </figure>
 
    <figure>
-    <img class="book-3-image" src="IMG_9598.jpeg">
+    <img class="book-3-image" src="images/IMG_9598.jpeg">
    </figure>
     
 </section>
