--- a/tastly.html
+++ b/tastly.html
@@ -39,7 +39,7 @@
     <section class="tastly-container">
 
         <figure>
-            <img class="tastly-image" src="IMG_tastly.jpg">
+            <img class="tastly-image" src="images/IMG_tastly.jpg">
         </figure>
 
 </section>
