--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-    
 </head>
 <body>
     <header> <!--Headline and listed items, link to contact page-->
@@ -28,15 +27,14 @@
     <a href="projects.html">
         <li>Projects</li>
     </a>
-    </ul>
+        </ul>
 </nav>
 </header>
-
-
     <main> <!--Body text-->
         <p>Welcome! My name is Gabriella and I study graphic design in Jönköping, Sweden. I was born in 2002 and i love typography, color theory and being creative. I aspire to be a graphic designer in the future
           and therefore i study the New Media program at Jönköping University. Here you can see my work and my progress. Hope you enjoy.</p>
-          <img class="me-image" src="IMG_0235.jpg" alt="Image of me">
+          <img class="me-image" src="images/IMG_0235.jpg" alt="Image of me">
+          <div class="animated-element"></div>
     </main>
     <footer>
         <p>@Gabriella Sundstrom</p>
